--- a/slica/pubspec.yaml
+++ b/slica/pubspec.yaml
@@ -28,12 +28,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  firebase_core:
-  firebase_auth:
-  cloud_firestore:
-  firebase_analytics:
   shared_preferences:
   animated_dialog:
+  firebase_core:
+  firebase_auth:
+  # cloud_firestore:
+  firebase_analytics:
+  file_picker: ^2.0.11
+  open_file: ^3.0.3
+  flutter_plugin_pdf_viewer: ^1.0.7
 
 dev_dependencies:
   flutter_test:
